change image url

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="cwl__flex-container">
         <div class="cwl__content-container">
             <div class="cwl__image-container">
-                <img src="product-e.png" alt="">
+                <img src="https://raw.githubusercontent.com/kyarunts/cwl/master/product-e.png" alt="">
 
                 <div class="test">
                     <div class="a">
